--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,6 +14,8 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/assets/**'
       - 'renovate.json'
+      - '.whitesource'
+      - 'gradle/libs.versions.toml'
 
 permissions: read-all
 
@@ -22,15 +24,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Set up build environment
-      - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 #2.4.0
+      - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # tag=v2.4.0
         with:
           fetch-depth: 0
       - name: Set up JDK 8
-        uses: actions/setup-java@f0bb91606209742fe3ea40199be2f3ef195ecabf #2.5.0
+        uses: actions/setup-java@f0bb91606209742fe3ea40199be2f3ef195ecabf # tag=v2.5.0
         with:
           distribution: adopt
           java-version: 8
-      - uses: actions/cache@937d24475381cd9c75ae6db12cb4e79714b926ed #2.1.7 save wrapper
+      - uses: actions/cache@937d24475381cd9c75ae6db12cb4e79714b926ed # tag=v2.1.7
         with:
           path: |
             ~/.gradle/wrapper
