--- a/.github/workflows/gradle-test-main.yml
+++ b/.github/workflows/gradle-test-main.yml
@@ -8,6 +8,7 @@ on:
     branches: [ main ]
     paths:
       - 'gradle/libs.versions.toml'
+      - 'gradle/wrapper/gradle-wrapper.properties'
 
 permissions: read-all
 
