Pin Jar/POM dependencies using checksums - Sets up new workflow to update pinned dependencies - Avoid unnecessary builds in case of partial Renovate updates - Pin Gradle dependencies - Set Renovate to sign-off commits and use assignee
{patch}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>

--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -19,6 +19,7 @@ on:
       - '.github/workflows/**'
       - 'renovate.json'
       - '.whitesource'
+      - 'gradle/libs.versions.toml'
 
 permissions: read-all
 
