--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,7 @@ on:
       - 'renovate.json'
       - '.whitesource'
       - 'gradle/libs.versions.toml'
+      - 'gradle/verification-metadata.xml'
       - 'gradle/wrapper/gradle-wrapper.properties'
 
 permissions: read-all
