--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,15 @@
 {
   "extends": [
-    "config:base"
+    "config:base",
+    ":gitSignOff"
   ],
+  "assignees": [
+    "nagyesta"
+  ],
+  "assigneesSampleSize": 1,
   "commitMessageSuffix": "{patch}",
   "github-actions": {
     "pinDigests": true
   },
-  "automergeStrategy": "fast-forward",
-  "automerge": true,
   "ignorePaths": [ ".github/workflows/**", "gradle-tests/**" ]
 }
