Update workflow action versions - Updates Github actions - Enables automatic updates using Renovate
Resolves #88
{patch}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -11,5 +11,5 @@
   "github-actions": {
     "pinDigests": true
   },
-  "ignorePaths": [ ".github/workflows/**", "gradle-tests/**" ]
+  "ignorePaths": [ "gradle-tests/**" ]
 }
