--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -4,6 +4,13 @@
 name: JavaCI-PR
 
 on:
+  push:
+    branches: [ main ]
+    paths:
+      - 'gradle/libs.versions.toml'
+      - 'gradle/verification-metadata.xml'
+      - 'gradle/wrapper/gradle-wrapper.properties'
+      - '.github/workflows/gradle-ci.yml'
   pull_request:
     branches: [ main ]
     paths-ignore:
@@ -17,6 +24,8 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/assets/**'
       - '.github/workflows/**'
+      - '!.github/workflows/gradle-ci.yml'
+      - '.github/pr-labeler.yml'
       - 'renovate.json'
       - '.whitesource'
       - 'gradle/libs.versions.toml'
@@ -35,17 +44,20 @@ jobs:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
         with:
           fetch-depth: 0
-      - name: Set up JDK 11
+      - name: 'Set up JDK 11'
         uses: actions/setup-java@3f07048e3d294f56e9b90ac5ea2c6f74e9ad0f98 # v3.10.0
         with:
           distribution: temurin
           java-version: 11
-      - uses: actions/cache@6998d139ddd3e68c71e9e398d8e40b71a2f39812 # v3.2.5
+      - name: 'Build with Gradle'
+        uses: gradle/gradle-build-action@3fbe033aaae657f011f88f29be9e65ed26bd29ef # v2.3.3
         with:
-          path: |
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-wrapper-
-      - name: Build with Gradle
-        run: ./gradlew printVersion build
+          arguments: printVersion build
+      - name: 'Upload Test reports'
+        if: always()
+        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
+        with:
+          name: test-report-abort-mission-plugin-${{ matrix.os }}
+          path: build/reports/tests/test
+          retention-days: 5
+
