--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,7 @@ on:
       - '.whitesource'
       - 'gradle/libs.versions.toml'
       - 'gradle/verification-metadata.xml'
+      - 'gradle/verification-metadata-clean.xml'
       - 'gradle/wrapper/gradle-wrapper.properties'
 
 permissions: read-all
