--- a/gradle-tests/minimal-groovy-off/build.gradle
+++ b/gradle-tests/minimal-groovy-off/build.gradle
@@ -8,6 +8,7 @@ version = "0.0.1"
 
 dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     testImplementation "com.github.nagyesta.abort-mission.boosters:abort.booster-junit-jupiter:4.0.0"
 }
 
