--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -21,11 +21,8 @@ on:
       - "pull_request_template.md"
       - "SECURITY.md"
       - "LICENSE"
-      - ".github/ISSUE_TEMPLATE/**"
-      - ".github/assets/**"
-      - ".github/workflows/**"
+      - ".github/**"
       - "!.github/workflows/gradle-ci.yml"
-      - ".github/pr-labeler.yml"
       - "renovate.json"
       - ".whitesource"
       - ".qlty/**"
@@ -45,6 +42,8 @@ jobs:
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           fetch-depth: 0
+      - name: Validate Gradle wrapper
+        uses: gradle/actions/wrapper-validation@017a9effdb900e5b5b2fddfb590a105619dca3c3 # v4.4.2
       - name: Set up JDK 17
         uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
         with:
