--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,6 +28,8 @@ permissions: read-all
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       # Set up build environment
       - name: Checkout
@@ -58,3 +60,18 @@ jobs:
           -PgithubToken=${{ secrets.PUBLISH_KEY }}
           -Pgradle.publish.key=${{ secrets.GRADLE_KEY }}
           -Pgradle.publish.secret=${{ secrets.GRADLE_SECRET }}
+      - name: Read tag name
+        id: read-tag-name
+        run: |
+          echo "RELEASE_TAG_NAME=$(cat ./build/version)" >> "$GITHUB_OUTPUT"
+      - name: Generate release
+        uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
+        with:
+          script: |
+            github.rest.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: "${{ steps.read-tag-name.outputs.RELEASE_TAG_NAME }}",
+              generate_release_notes: true,
+              draft: false
+            });
