--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
 name: JavaCI
 
 on:
@@ -30,13 +27,15 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      packages: write
+    outputs:
+      tag_name: ${{ steps.read-tag-name.outputs.RELEASE_TAG_NAME }}
     steps:
       # Set up build environment
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           fetch-depth: 0
-          token: ${{ secrets.PUBLISH_KEY }}
       - name: Validate Gradle wrapper
         uses: gradle/actions/wrapper-validation@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2 # v5.0.0
       - name: Set up JDK 17
@@ -50,28 +49,43 @@ jobs:
           cache-disabled: true
       - name: Build with Gradle
         run: >
-          ./gradlew tagVersion build
-          -PgithubUser=${{ secrets.PUBLISH_USER_NAME }}
-          -PgithubToken=${{ secrets.PUBLISH_KEY }}
-      - name: Publish with Gradle
-        run: >
-          ./gradlew publish publishPlugins
-          -PgithubUser=${{ secrets.PUBLISH_USER_NAME }}
-          -PgithubToken=${{ secrets.PUBLISH_KEY }}
-          -Pgradle.publish.key=${{ secrets.GRADLE_KEY }}
-          -Pgradle.publish.secret=${{ secrets.GRADLE_SECRET }}
+          ./gradlew printVersion build
       - name: Read tag name
         id: read-tag-name
         run: |
           echo "RELEASE_TAG_NAME=$(cat ./build/version)" >> "$GITHUB_OUTPUT"
-      - name: Generate release
+      - name: Tag version
+        run: |
+          git config --global user.name 'Esta Nagy'
+          git config --global user.email 'nagyesta@gmail.com'
+          git tag ${{ steps.read-tag-name.outputs.RELEASE_TAG_NAME }}
+          git push origin ${{ steps.read-tag-name.outputs.RELEASE_TAG_NAME }}
+      - name: Publish with Gradle
+        run: >
+          ./gradlew publish publishPlugins
+          -PgithubUser=${{ secrets.GITHUB_ACTOR }}
+          -PgithubToken=${{ secrets.GITHUB_TOKEN }}
+          -Pgradle.publish.key=${{ secrets.GRADLE_KEY }}
+          -Pgradle.publish.secret=${{ secrets.GRADLE_SECRET }}
+
+  create-release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
+    steps:
+      - name: Create release
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
+        env:
+          TAG_NAME: ${{needs.build.outputs.tag_name }}
         with:
           script: |
             github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: "${{ steps.read-tag-name.outputs.RELEASE_TAG_NAME }}",
+              tag_name: "${{ env.TAG_NAME }}",
               generate_release_notes: true,
               draft: false
             });
+
