--- a/.github/workflows/update-dependency-checksums.yml
+++ b/.github/workflows/update-dependency-checksums.yml
@@ -8,12 +8,13 @@ jobs:
   build:
     name: Dependency checksum compaction action
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           fetch-depth: 0
-          token: ${{ secrets.PUBLISH_KEY }}
       - name: Validate Gradle wrapper
         uses: gradle/actions/wrapper-validation@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2 # v5.0.0
       - name: Set up JDK 17
@@ -33,19 +34,6 @@ jobs:
         run: |
           git config --global user.name 'Esta Nagy'
           git config --global user.email 'nagyesta@gmail.com'
-          git checkout -b feature/update-dependency-checksums-${{ github.run_number }}
           git add gradle/verification-metadata.xml
-          git commit -asm "Updating dependency checksums {patch}"
-          git push -f --set-upstream origin feature/update-dependency-checksums-${{ github.run_number }}
-      - name: Create PR
-        uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
-        with:
-          github-token: ${{ secrets.PUBLISH_KEY }}
-          script: |
-            github.rest.pulls.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              head: "feature/update-dependency-checksums-${{ github.run_number }}",
-              base: "main",
-              title: "Updating dependency checksums {patch}"
-            });
+          git commit -asm "Pinning dependency checksums {patch}"
+          git push -f --set-upstream origin ${{ github.ref_name }}
